crates/rome_cli/tests/snapshots/main_commands_lint/apply_unsafe_with_error.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `test1.js`

```js
const a = 4;
console.log(a);
function f() { arguments; }

```

## `test2.js`

```js
const a = 4;
console.log(a);
function f() { arguments; }

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test1.js:3:16 lint/style/noArguments ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Use the rest parameters instead of arguments.
  
    1 │ const a = 4;
    2 │ console.log(a);
  > 3 │ function f() { arguments; }
      │                ^^^^^^^^^
    4 │ 
  
  i arguments does not have Array.prototype methods and can be inconvenient to use.
  

```

```block
test1.js lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The file contains diagnostics that needs to be addressed.
  

```

```block
test2.js:3:16 lint/style/noArguments ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Use the rest parameters instead of arguments.
  
    1 │ const a = 4;
    2 │ console.log(a);
  > 3 │ function f() { arguments; }
      │                ^^^^^^^^^
    4 │ 
  
  i arguments does not have Array.prototype methods and can be inconvenient to use.
  

```

```block
test2.js lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The file contains diagnostics that needs to be addressed.
  

```

```block
Fixed 2 file(s) in <TIME>
```


