crates/rome_cli/tests/snapshots/main_commands_lint/config_recommended_group.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `check.js`

```js
new Symbol("");
```

## `rome.json`

```json
{
  "linter": {
    "rules": {
        "recommended": false,
        "correctness": {
            "recommended": true
        }
    }
  }
}
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.js:1:1 lint/correctness/noNewSymbol  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Symbol cannot be called as a constructor.
  
  > 1 │ new Symbol("");
      │ ^^^^^^^^^^^^^^
  
  i Suggested fix: Remove new.
  
    1 │ new·Symbol("");
      │ ----           

```

```block
check.js lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The file contains diagnostics that needs to be addressed.
  

```

```block
Checked 1 file(s) in <TIME>
```


