crates/rome_cli/tests/snapshots/main_commands_lint/downgrade_severity.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
debugger;
```

## `rome.json`

```json
{
  "linter": {
    "rules": {
        "recommended": true,
        "suspicious": {
            "noDebugger": "warn"
        }
    }
  }
}
```

# Emitted Messages

```block
file.js:1:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This is an unexpected use of the debugger statement.
  
  > 1 │ debugger;
      │ ^^^^^^^^^
  
  i Suggested fix: Remove debugger statement
  
    1 │ debugger;
      │ ---------

```

```block
Checked 1 file(s) in <TIME>
```


